Dynamic resizing and bug squashing

--- a/app/css/lineChart.css
+++ b/app/css/lineChart.css
@@ -1,12 +1,11 @@
 .chart-wrapper {
     margin: 0 auto;
-    background-color: #FAF7F7;
+    width: 100%;
 }
 
 .chart-wrapper .inner-wrapper {
     position: relative;
     padding-bottom: 50%;
-    width: 100%;
 }
 
 .chart-wrapper .outer-box {
@@ -15,8 +14,8 @@
 }
 
 .chart-wrapper .inner-box {
+    background-color: #FAF7F7;
     width: 100%;
-    height: 100%;
 }
 
 .chart-wrapper text {
